--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <source srcset="./images/cards-1x.avif 1x, ./images/cards-2x.avif 2x" type="image/avif">
           <source srcset="./images/cards-1x.webp 1x, ./images/cards-2x.webp 2x" type="image/webp">
           <img class="content__picture" src="./images/cards-1x.png"
-            srcset="./images/cards-1x.png 1x, ./images/cards-2x.png 2x" type="image/webp" loading="lazy"
+            srcset="./images/cards-1x.png 1x, ./images/cards-2x.png 2x" loading="lazy"
             alt="На столе, рядом с записной книжкой, цветком в горшке, лежит карточка с надписью: верю в тебя настоящего">
         </picture>
         <figcaption class="content__picture-caption">Колода Oblique Strategies</figcaption>
@@ -95,9 +95,9 @@
           И кстати, сейчас необязательно охотиться за редкими физическими колодами Oblique Strategies 
           — тем более, что их моментально разбирают фанаты Ино. Есть довольно симпатичные <a class="content__link"
           href="https://obliquestrategies.ca/" target="_blank" rel="noopener noreferrer">веб-сайты</a> с
-          диджитал-эквивалентами карточек и приложения для <a class="content__link"
+          диджитал-эквивалентами карточек и приложения <a class="content__link"
           href="https://apps.apple.com/us/app/oblique-strategies-se/id1104927011" target="_blank"
-          rel="noopener noreferrer">iOS</a> и <a class="content__link"
+          rel="noopener noreferrer">для iOS</a> и <a class="content__link"
           href="https://play.google.com/store/apps/details?id=com.monoloco.obliquestrategies&hl=en_US&gl=US&pli=1"
           target="_blank" rel="noopener noreferrer"> Android</a>.
         </p>
